vlib/v/checker/tests/array_delete_imut_err.vv
fn main() {
	a := [1, 2, 3, 4]
	println(a)

	a.delete(1)
	println(a)
}
